# copaDrive

./: Readme.md  Readme.txt  Tutorial_CopaDrive_Omnet  Tutorial_ROS_Installation  Tutorial_teste.txt
CISTER_car_control/src/car_control/: CMakeLists.txt  package.xml
CISTER_car_control/src/car_control/launch/: talker_listener.launch
CISTER_car_control/src/car_control/leader_keyboard_record_rosbag/: CMakeLists.txt  leader_keyboard_record_rosbag.cpp
CISTER_car_control/src/car_control/leader_keyboard_stable_speed/: CMakeLists.txt  leader_keyboard_stable_speed.cpp
CISTER_car_control/src/car_control/platooning/: CMakeLists.txt  platooning.cpp
CISTER_car_control/src/car_control/platooning_OBU/: CMakeLists.txt  platooning_OBU.cpp
CISTER_car_control/src/car_control/platooning_OMNET/: CMakeLists.txt  platooning_OMNET.cpp
CISTER_car_control/src/car_control/rosbag_player/: CMakeLists.txt  rosbag_player.cpp
CISTER_car_control/src/car_control/scenario/: CMakeLists.txt  scenario.cpp
CISTER_car_control/src/car_control/scenarios_gui/: CMakeLists.txt  scenarios_gui.cpp
CISTER_car_control/src/car_control/talker/: talker.cpp
CISTER_car_simulator/src/ros_its_msgs/: CMakeLists.txt
CISTER_car_simulator/src/ros_its_msgs/msg/: OMNET_CAM.msg
CISTER_image_processing/src/image_processing/: CAMSent.csv  CMakeLists.txt  itsc.m  itsc_2.m  log_position_SV_car1.csv  log_position_SV_car10.csv  log_position_SV_car11.csv  log_position_SV_car2.csv  log_position_SV_car3.csv  log_position_SV_car4.csv  log_position_SV_car5.csv  log_position_SV_car6.csv  log_position_SV_car7.csv  log_position_SV_car8.csv  log_position_SV_car9.csv  uporto.m
CISTER_image_processing/src/image_processing/Logs/: .~lock.log_position_100.csv#  1_OVAL_KP50_KD_075_log_position_SV_car2.csv  1_OVAL_KP50_KD_075_log_position_SV_car3.csv  1_OVAL_KP50_KD_075_log_position_TV.csv  1_O_B_KP50_LF_log_position_SV_car2.csv  1_O_B_KP50_LF_log_position_SV_car3.csv  1_O_B_KP50_LF_log_position_TV.csv  2_OVAL_KP50_KD_075_NB_log_position_SV_car2.csv  2_OVAL_KP50_KD_075_NB_log_position_SV_car3.csv  2_OVAL_KP50_KD_075_NB_log_position_TV.csv  2_O_NB_KP50_LF_log_position_SV_car2.csv  2_O_NB_KP50_LF_log_position_SV_car3.csv  2_O_NB_KP50_LF_log_position_TV.csv  3_BEAR_1_5_log_position_SV_car2.csv  3_BEAR_1_5_log_position_SV_car3.csv  3_BEAR_1_5_log_position_TV.csv  3_O_B_N1_7_log_position_SV_car2.csv  3_O_B_N1_7_log_position_SV_car3.csv  3_O_B_N1_7_log_position_TV.csv  4_BEAR_7_11_log_position_SV_car2.csv  4_BEAR_7_11_log_position_SV_car3.csv  4_BEAR_7_11_log_position_TV.csv  4_O_B_20_-1_10_log_position_SV_car2.csv  4_O_B_20_-1_10_log_position_SV_car3.csv  4_O_B_20_-1_10_log_position_SV_car4.csv  4_O_B_20_-1_10_log_position_TV.csv  5_BEAR_20_15_log_position_SV_car2.csv  5_BEAR_20_15_log_position_SV_car3.csv  5_BEAR_20_15_log_position_TV.csv  5_O_B_7_11_log_position_SV_car2.csv  5_O_B_7_11_log_position_SV_car3.csv  5_O_B_7_11_log_position_TV.csv  6_BEAR_20_15_1_log_position_SV_car2.csv  6_BEAR_20_15_1_log_position_SV_car3.csv  6_BEAR_20_15_1_log_position_SV_car4.csv  6_BEAR_20_15_1_log_position_TV.csv  6_O_B_20_-1_10_log_position_SV_car2.csv  6_O_B_20_-1_10_log_position_SV_car3.csv  6_O_B_20_-1_10_log_position_SV_car4.csv  6_O_B_20_-1_10_log_position_TV.csv  (+15 more)
CISTER_image_processing/src/image_processing/launch/: listener.launch  vehicle.launch
CISTER_image_processing/src/image_processing/msg/: coords (copy).msg  coords.msg  drive_param.msg  error_control.msg
CISTER_image_processing/src/image_processing/scripts/: Simulation_connector_v074.py  Simulation_connector_v075.py  Simulation_connector_v076.py  car_detection_withoutAI.py  distance.py  lane_lines_back.py  lane_lines_detection.py  lane_lines_detection_v00.py  lane_lines_detection_v01.py  lane_lines_detection_v02.py  listener.py  listener_v00.py  listener_v01.py  listener_v02.py  listener_v03.py  listener_v04.py  network.py  old_sim.py  platooning.py  platooning_v09.py  platooning_v092.py  platooning_v10.py  simulation_connector.py  simulation_connector_v8.0.py  simulation_connector_v8.1.py  (+2 more)
(+285 files in other folders)
