<?xml version="1.0"?>
<package>
  <name>car_control</name>
  <version>0.0.1</version>
  <description>
    TODO
  </description>
  <maintainer email="pjsol@isep.ipp.pt">Pedro Santos</maintainer>
  <license>BSD</license>

  <url type="website">none</url>
  <url type="bugtracker">none</url>
  <url type="repository">none</url>
  <author>Pedro Santos</author>
	
   
  <buildtool_depend>catkin</buildtool_depend>
   
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_its_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
